fdo#43989: Revert "win32-dont-attempt-restart.diff: Don't attempt to restart OOo after crash"

This reverts commit f8e1d2438199c4a76ceeb36352678c415e25272c, which erroneously
disabled automatic restart on Windows completely and has now been addressed in a
better way with 150bf2c95c193b30e050ac1c54d64b5485af088d "bnc#524250: Show
backing component after cancelled recovery."

bnc#524250: Show backing component after cancelled recovery

...instead of an empty Writer document, which is non-intuitive when the user had
worked on something other than a Writer document before the crash.

f8e1d2438199c4a76ceeb36352678c415e25272c "win32-dont-attempt-restart.diff: Don't
attempt to restart OOo after crash" had previously attempted to fix this with a
sledgehammer approach of not restarting at all after a crash on Windows, under
the wrong assumption that there would be no restart after crash at all on Linux
either (which was apparently rather a bug caused by the newly introduced
oosplash at that time).

Change-Id: If65d2e21640d56262c486d887c4a29137cabcd0a