desktop/source/app/app.cxx
@@ -1222,24 +1222,19 @@ sal_Bool impl_callRecoveryUI(sal_Bool bEmergencySave     ,
     css::util::URL aURL;
     if (bEmergencySave)
         aURL.Complete = COMMAND_EMERGENCYSAVE;
+    else if (bExistsRecoveryData)
+        aURL.Complete = COMMAND_RECOVERY;
+    else if (bCrashed && Desktop::isCrashReporterEnabled() )
+        aURL.Complete = COMMAND_CRASHREPORT;
     else
-    {
-        if (bExistsRecoveryData)
-            aURL.Complete = COMMAND_RECOVERY;
-        else
-        if (bCrashed && Desktop::isCrashReporterEnabled() )
-            aURL.Complete = COMMAND_CRASHREPORT;
-    }
+        return false;
 
+    xURLParser->parseStrict(aURL);
+
+    css::uno::Any aRet = xRecoveryUI->dispatchWithReturnValue(aURL, css::uno::Sequence< css::beans::PropertyValue >());
     sal_Bool bRet = sal_False;
-    if ( !aURL.Complete.isEmpty() )
-    {
-        xURLParser->parseStrict(aURL);
-
-        css::uno::Any aRet = xRecoveryUI->dispatchWithReturnValue(aURL, css::uno::Sequence< css::beans::PropertyValue >());
-        aRet >>= bRet;
-    }
-    return bRet;
+    aRet >>= bRet;
+    return !bEmergencySave || bRet;
 }
 
 /*
@@ -1693,40 +1688,8 @@ int Desktop::Main()
                 (!Application::AnyInput( VCL_INPUT_APPEVENT )                          ))
             {
                  RTL_LOGFILE_CONTEXT_TRACE( aLog, "{ create BackingComponent" );
-                 Reference< XFrame > xDesktopFrame( xDesktop, UNO_QUERY );
-                 if (xDesktopFrame.is())
-                 {
-                   SetSplashScreenProgress(60);
-                   Reference< XFrame > xBackingFrame;
-                   Reference< ::com::sun::star::awt::XWindow > xContainerWindow;
-
-                   xBackingFrame = xDesktopFrame->findFrame(OUString( "_blank" ), 0);
-                   if (xBackingFrame.is())
-                       xContainerWindow = xBackingFrame->getContainerWindow();
-                   if (xContainerWindow.is())
-                   {
-                       SetDocumentExtendedStyle(xContainerWindow);
-                       SetSplashScreenProgress(75);
-                       Sequence< Any > lArgs(1);
-                       lArgs[0] <<= xContainerWindow;
-
-                       Reference< XController > xBackingComp(
-                           xSMgr->createInstanceWithArguments(OUString( "com.sun.star.frame.StartModule" ), lArgs), UNO_QUERY);
-                        if (xBackingComp.is())
-                        {
-                            Reference< ::com::sun::star::awt::XWindow > xBackingWin(xBackingComp, UNO_QUERY);
-                            // Attention: You MUST(!) call setComponent() before you call attachFrame().
-                            // Because the backing component set the property "IsBackingMode" of the frame
-                            // to true inside attachFrame(). But setComponent() reset this state everytimes ...
-                            xBackingFrame->setComponent(xBackingWin, xBackingComp);
-                            SetSplashScreenProgress(100);
-                            xBackingComp->attachFrame(xBackingFrame);
-                            CloseSplashScreen();
-                            xContainerWindow->setVisible(sal_True);
-                        }
-                    }
-                }
-                RTL_LOGFILE_CONTEXT_TRACE( aLog, "} create BackingComponent" );
+                 ShowBackingComponent(this);
+                 RTL_LOGFILE_CONTEXT_TRACE( aLog, "} create BackingComponent" );
             }
         }
     }
@@ -2374,7 +2337,7 @@ void Desktop::OpenClients()
     // check if a document has been recovered - if there is one of if a document was loaded by cmdline, no default document
     // should be created
     Reference < XComponent > xFirst;
-    sal_Bool bLoaded = sal_False;
+    bool bRecovery = false;
 
     const CommandLineArgs& rArgs = GetCommandLineArgs();
     SvtInternalOptions  aInternalOptions;
@@ -2503,7 +2466,6 @@ void Desktop::OpenClients()
         impl_checkRecoveryState(bCrashed, bExistsRecoveryData, bExistsSessionData);
 
         if ( !getenv ("OOO_DISABLE_RECOVERY") &&
-            ( ! bLoaded ) &&
             (
                 ( bExistsRecoveryData ) || // => crash with files    => recovery
                 ( bCrashed            )    // => crash without files => error report
@@ -2512,22 +2474,10 @@ void Desktop::OpenClients()
         {
             try
             {
-                impl_callRecoveryUI(
+                bRecovery = impl_callRecoveryUI(
                     sal_False          , // false => force recovery instead of emergency save
                     bCrashed           ,
                     bExistsRecoveryData);
-                /* TODO we cant be shure, that at least one document could be recovered here successfully
-                    So we set bLoaded=sal_True to supress opening of the default document.
-                    But we should make it more safe. Otherwhise we have an office without an UI ...
-                    ...
-                    May be we can check the desktop if some documents are existing there.
-                 */
-                Reference< XFramesSupplier > xTasksSupplier(
-                        ::comphelper::getProcessServiceFactory()->createInstance( OUString("com.sun.star.frame.Desktop") ),
-                        ::com::sun::star::uno::UNO_QUERY_THROW );
-                Reference< XElementAccess > xList( xTasksSupplier->getFrames(), UNO_QUERY_THROW );
-                if ( xList->hasElements() )
-                    bLoaded = sal_True;
             }
             catch(const css::uno::Exception& e)
             {
@@ -2559,16 +2509,13 @@ void Desktop::OpenClients()
             OSL_FAIL(OUStringToOString(aMessage, RTL_TEXTENCODING_ASCII_US).getStr());
         }
 
-        if (
-            ( ! bLoaded            ) &&
-            (   bExistsSessionData )
-           )
+        if ( bExistsSessionData )
         {
             // session management
             try
             {
                 Reference< XSessionManagerListener > r(xSessionListener, UNO_QUERY_THROW);
-                bLoaded = r->doRestore();
+                r->doRestore();
             }
             catch(const com::sun::star::uno::Exception& e)
             {
@@ -2606,8 +2553,6 @@ void Desktop::OpenClients()
          ( !aRequest.aPrintToList.empty() && !aRequest.aPrinterName.isEmpty() ) ||
          !aRequest.aConversionList.empty() )
     {
-        bLoaded = sal_True;
-
         if ( rArgs.HasModuleParam() )
         {
             SvtModuleOptions    aOpt;
@@ -2656,6 +2601,12 @@ void Desktop::OpenClients()
     if ( rArgs.IsQuickstart() || rArgs.IsInvisible() || Application::AnyInput( VCL_INPUT_APPEVENT ) )
         // soffice was started as tray icon ...
         return;
+
+    if ( bRecovery )
+    {
+        ShowBackingComponent(0);
+    }
+    else
     {
         OpenDefault();
     }
@@ -3032,6 +2983,58 @@ void Desktop::DoFirstRunInitializations()
     catch(const ::com::sun::star::uno::Exception&)
     {
         OSL_FAIL( "Desktop::DoFirstRunInitializations: caught an exception while trigger job executor ..." );
+    }
+}
+
+void Desktop::ShowBackingComponent(Desktop * progress)
+{
+    Reference< XMultiServiceFactory > xSMgr(
+        comphelper::getProcessServiceFactory(), UNO_SET_THROW);
+    Reference< XFrame > xDesktopFrame(
+        xSMgr->createInstance("com.sun.star.frame.Desktop"), UNO_QUERY);
+    if (xDesktopFrame.is())
+    {
+        if (progress != 0)
+        {
+            progress->SetSplashScreenProgress(60);
+        }
+        Reference< XFrame > xBackingFrame;
+        Reference< ::com::sun::star::awt::XWindow > xContainerWindow;
+
+        xBackingFrame = xDesktopFrame->findFrame(OUString( "_blank" ), 0);
+        if (xBackingFrame.is())
+            xContainerWindow = xBackingFrame->getContainerWindow();
+        if (xContainerWindow.is())
+        {
+            SetDocumentExtendedStyle(xContainerWindow);
+            if (progress != 0)
+            {
+                progress->SetSplashScreenProgress(75);
+            }
+            Sequence< Any > lArgs(1);
+            lArgs[0] <<= xContainerWindow;
+
+            Reference< XController > xBackingComp(
+                xSMgr->createInstanceWithArguments(OUString( "com.sun.star.frame.StartModule" ), lArgs), UNO_QUERY);
+            if (xBackingComp.is())
+            {
+                Reference< ::com::sun::star::awt::XWindow > xBackingWin(xBackingComp, UNO_QUERY);
+                // Attention: You MUST(!) call setComponent() before you call attachFrame().
+                // Because the backing component set the property "IsBackingMode" of the frame
+                // to true inside attachFrame(). But setComponent() reset this state everytimes ...
+                xBackingFrame->setComponent(xBackingWin, xBackingComp);
+                if (progress != 0)
+                {
+                    progress->SetSplashScreenProgress(100);
+                }
+                xBackingComp->attachFrame(xBackingFrame);
+                if (progress != 0)
+                {
+                    progress->CloseSplashScreen();
+                }
+                xContainerWindow->setVisible(sal_True);
+            }
+        }
     }
 }
 
